# w0rmnet

./: .gitignore  CMakeLists.txt  README.md  app.c  component_registry.c  component_registry.h  components.c  components.h  core_basic_window.c  entities.c  entities.h  gui_icons.h  rendering_system.h  sprites.c  sprites.h  utils.c  utils.h  world.sav
cmake/: FindGLIB2.cmake
components/: component_registry.c  component_registry.h  components.c  components.h  connection.c  connection.h  device.c  device.h  file_storage.h  file_system.h  infection.c  infection.h  known_hosts.c  known_hosts.h  logger.c  logger.h  loot.h  packet.c  packet.h  polygon.c  polygon.h  position.c  position.h  process.c  process.h  route_table.c  route_table.h  sprite.c  sprite.h  wire.c  wire.h
components/utils/: device_id.c  device_id.h  device_id_wordlist.h
entities/: entities.c  entities.h  helpers.c  helpers.h  machine.c  machine.h  network_switch.c  network_switch.h  router.c  router.h
events/: device_events.c  device_events.h  events.c  events.h  player_events.c  player_events.h  worm_events.c  worm_events.h
graphics/: shaders.c  shaders.h  sprites.c  sprites.h  tiles.c  tiles.h
lib/: raygui.h  raymath.h  style_cyber.h  text_rectangle_bounds.c  text_rectangle_bounds.h
lib/log/: log.h
resources/: iconset.rgi
resources/shaders/: scanlines.fs
store/: cred_dumps.c  cred_dumps.h  exploits.c  exploits.h  files.h  programs.c  programs.h  worms.c  worms.h
systems/: botnet_system.c  botnet_system.h  device_rendering_system.c  device_rendering_system.h  device_ui_system.c  device_ui_system.h  loot_system.c  loot_system.h  main_gui_system.c  main_gui_system.h  packet_routing_system.c  packet_routing_system.h  process_running_system.c  process_running_system.h  world_state_system.c  world_state_system.h  worm_system.c  worm_system.h
systems/main_gui_system/: area_viewer_window.c  area_viewer_window.h  isometric_map_rendering.c  isometric_map_rendering.h  minimap.c  minimap.h  network_map_view.c  network_map_view.h  recent_events.c  recent_events.h  toolwindow.c  toolwindow.h  worms_window.c  worms_window.h
systems/main_gui_system/toolwindows/: network_map_toolwindow.c  network_map_toolwindow.h  worms_toolwindow.c  worms_toolwindow.h
systems/process_runner/: check_origin_runner.c  check_origin_runner.h  login_runner.c  login_runner.h  netscan_runner.c  netscan_runner.h  ping_runner.c  ping_runner.h  proc_runner_table.c  proc_runner_table.h
systems/ui/: area_viewer_window.c  area_viewer_window.h  custom_raygui.c  custom_raygui.h  device_info_panel.c  device_info_panel.h  device_info_window.c  device_info_window.h  ui_consts.h  ui_window.c  ui_window.h  window_struct.h
systems/utils/: rendering.c  rendering.h  routing.c  routing.h
utils/: math_macros.h  random.c  random.h  timer.c  timer.h  uuid.c
world/: world_gen.c  world_gen.h  world_map.c  world_map.h  world_state.c  world_state.h
